arc: Invalide app icon on package update.

ARC app icons need to be invalidated and app icon in app launcher and in
shelf should be automatically updated.

BUG=725305
TEST=Manually + unit tests.

Review-Url: https://codereview.chromium.org/2896973002
Cr-Commit-Position: refs/heads/master@{#474443}

Former-commit-id: 1f90c7dc31ae659ff560baebcabfe24c3e036312